themes/custom.css
/* ... */
#nprogress .bar {
  background: var(--colorHi);
}
#nprogress .peg {
  box-shadow: 0 0 10px var(--colorHi), 0 0 5px var(--colorHi);
}
/* menuwrapper */
.navbar-vivaldi {
  background-color: var(--colorAc);
}
.vivaldi-nav-link {
  color: var(--colorAcFg) !important;
}
.navbar-vivaldi a:focus,
.navbar-vivaldi a:hover,
.navbar-vivaldi li.active > a,
.vivaldi-nav-link.active {
  color: var(--colorAc) !important;
  background: var(--colorAcFg) !important;
}

/* Dropdowns */
.dropdown-menu {
  background-color: var(--colorDd);
}
.header .chat-list {
  color: var(--colorDdFg);
}
.header .chat-list > li:hover {
  background-color: var(--colorDdL);
}
.header .notification-list li.unread,
.chat-list.chats-list li.unread {
  background-color: var(--colorDdM) !important;
}
li .notif-dropdown-link a:hover {
  background-color: var(--colorDdL);
}
.header .notif-dropdown-link {
  border-top-color: var(--colorDdH);
}
.header .chat-list > li:not(:last-child) {
  border-bottom-color: var(--colorDdL);
}
.dropdown-menu .divider {
  background-color: var(--colorDdM);
}
.dropdown-header {
  color: var(--colorDdFg);
  opacity: 0.8;
}
.dropdown-menu a,
.dropdown-menu a:hover,
.dropdown-menu a:focus,
.dropdown-menu > li > a,
.dropdown-menu > li > a:focus,
.dropdown-menu > li > a:hover,
ul.dropdown-menu.dropdown-menu-right a,
ul.dropdown-menu.dropdown-menu-right a:hover,
ul.dropdown-menu.dropdown-menu-right a:focus {
  color: var(--colorDdFg) !important;
}
.dropdown-menu > li > a:focus,
.dropdown-menu > li > a:hover,
.dropdown-menu > .active > a,
.dropdown-menu > .active > a:focus,
.dropdown-menu > .active > a:hover {
  background-color: var(--colorDdL);
}
.header .notification-list li:hover,
.slideout-menu .notification-list li:hover,
.header .notif-dropdown-link a:hover {
  background-color: var(--colorDdL);
}
.dropdown-menu > li > a {
  text-decoration: none !important;
}
.badge {
  background-color: var(--colorDdM);
  color: var(--colorDdFg);
}
.textcomplete-dropdown,
.textcomplete-dropdown .textcomplete-footer,
.textcomplete-dropdown .textcomplete-item {
  border-color: var(--colorDdM);
  color: var(--colorDdFg);
}
.textcomplete-dropdown .textcomplete-item.active,
.textcomplete-dropdown .textcomplete-item:hover {
  background-color: var(--colorDdL);
}

/* Pagination */
.pagination > li > a,
.pagination > li > span {
  background-color: transparent;
  border-color: var(--colorBgM) !important;
  color: var(--colorFg) !important;
}
.pagination > li > a:hover,
.pagination > li > span:hover,
.pagination > li > a:focus,
.pagination > li > a:hover,
.pagination > li > span:focus,
.pagination > li > span:hover {
  background-color: var(--colorBgL);
  color: var(--colorFg);
}
.pagination > .disabled > a,
.pagination > .disabled > span {
  background-color: var(--colorBg);
  color: var(--colorBgM) !important;
}
.pagination > .active > a,
.pagination > .active > a:focus,
.pagination > .active > a:hover,
.pagination > .active > span,
.pagination > .active > span:focus,
.pagination > .active > span:hover {
  background-color: var(--colorHi) !important;
  color: var(--colorBg) !important;
}
.topic .pagination-block {
  background-color: var(--colorBgL) !important;
}
.pagination-block .progress-bar {
  background-color: var(--colorCo) !important;
  opacity: 0.3;
}
.topic .pagination-block .pagination-text,
.wrapper.dropup i {
  color: var(--colorFg2);
}
.topic .pagination-block .dropdown-toggle:focus {
  text-decoration: none !important;
}
.pagination-block .dropdown-menu {
  background-color: var(--colorBg);
  border-color: var(--colorBgH);
  color: var(--colorFg);
  z-index: 1002;
}

.pagination-block ul.dropdown-menu.dropdown-menu-right a {
  color: var(--colorFg) !important;
}
.topic .pagination-block .wrapper .dropdown-menu .scroller-container {
  border-color: var(--colorBgM);
}
.topic
  .pagination-block
  .wrapper
  .dropdown-menu
  .scroller-container
  .scroller-thumb
  .thumb-text {
  color: var(--colorHi);
}
.topic
  .pagination-block
  .wrapper
  .dropdown-menu
  .scroller-container
  .scroller-thumb
  .scroller-thumb-icon {
  background-color: var(--colorHi);
}
.topic .pagination-block .dropdown-menu .pointer.pagetop i,
.topic .pagination-block .dropdown-menu .pointer.pagebottom i,
.topic .pagination-block .dropdown-menu .pointer.pagetop,
.topic .pagination-block .dropdown-menu .pointer.pagebottom {
  color: var(--colorHi);
}

/* Text */
.topic .posts > li .dropdown-menu a,
.topic .posts > li .dropdown-menu a:hover,
.topic .posts > li .post-footer a,
.topic .posts > li .post-header a {
  color: var(--colorFg);
}
.topic .posts > li .post-header a:hover,
.topic .posts > li .post-signature a:hover,
.topic .posts > li .post-footer a:hover,
.float-end.small a,
small.float-end a {
  color: var(--colorLi) !important;
}
html .topic .answered {
  color: var(--colorHi);
}
html .topic .unanswered {
  color: var(--colorCo);
}
.answered {
  border-color: var(--colorHi);
  color: var(--colorHi);
}
.unanswered {
  border-color: var(--colorCo);
  color: var(--colorCo);
}
.posts [component="post"][data-index="-1"].isSolved {
  border-left-color: var(--colorHi);
  border-top-color: var(--colorHi);
  border-right-color: var(--colorHi) !important;
  border-bottom-color: var(--colorHi) !important;
}
.posts [component="post"][data-index="-1"].isSolved:before {
  color: var(--colorBg);
  background-color: var(--colorHi);
}
.posts [component="post"][data-index="-1"].isSolved:after {
  color: var(--colorHi) !important;
}
.topic .posts .timeline-event .timeline-badge {
  color: var(--colorHi);
  background-color: var(--colorBg);
  border-color: var(--colorHi);
}
.posts-list .posts-list-item .topic-title,
a,
.breadcrumb a {
  color: var(--colorFg);
}
.category-children a,
.lastpost a,
.title a {
  color: var(--colorFg);
}
.category-item a {
  color: var(--colorFg);
}
.category-item a:hover {
  color: var(--colorLi);
}
/* ... */

